--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,6 +33,6 @@
   },
   "devDependencies": {
     "gh-pages": "^2.0.1"
-  },
+  }
 
 }
