--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clicky-game",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://savagedetective.github.io/clicky-game/",
   "dependencies": {
     "react": "^16.8.6",
@@ -34,5 +34,4 @@
   "devDependencies": {
     "gh-pages": "^2.0.1"
   }
-
 }
